# Low_latency_with_C-

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  building_the_trade_engine_framework  cmake_install.cmake  exchange_main  exchange_main.cpp  hash_benchmark  lf_queue.h  lf_queue_example  lf_queue_example.cpp  logging.h  logging_example  logging_example.cpp  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  mem_pool_example  mem_pool_example.cpp  perf_utils.h  release_benchmark  socket_example  socket_example.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_example  thread_example.cpp  thread_utils.h  time_utils.h  trading_main  trading_main.cpp  types.h
8Chapter_processing_market_data_sending_orders_to_the_exchange/common/: CMakeLists.txt  lf_queue.h  lf_queue_example.cpp  logging.h  logging_example.cpp  macros.h  mcast_socket.cpp  mcast_socket.h  mem_pool.h  mem_pool_example.cpp  socket_example.cpp  socket_utils.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  thread_example.cpp  thread_utils.h  time_utils.h  types.h
9Chapter_building_the_trading_algorithms_building_blocks/trading/: CMakeLists.txt
9Chapter_building_the_trading_algorithms_building_blocks/trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
9Chapter_building_the_trading_algorithms_building_blocks/trading/order_gw/: order_gateway.cpp  order_gateway.h
9Chapter_building_the_trading_algorithms_building_blocks/trading/strategy/: feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  (+11 more)
(+455 files in other folders)
